Changed background color; Fixed toggle dark mode bugs; Added email icon

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,9 +11,10 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #f5f5fa;
+    // --body-background: #f5f5fa;
+    --body-background: #4c546116;
 
-    --accent-color: #34495e;
+    --accent-color: #47345e;
     --accent-color-darker: #2c3e50;
     --accent-color-text: #fff;
     --body-text-color: #bababa;
